fix alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,7 +70,7 @@ body {
 /* projects */
 .secondary-menu {
   margin-bottom: 20px;
-  margin-left: -15px;
+  margin-left: 12px;
   float: left;
   padding: 0px;
   .black-link {
@@ -103,6 +103,7 @@ body {
 
 .project {
   width: 100%;
+  max-height: 100%;
   padding: 15px 0px;
   &:hover{
     opacity: 0.8;
